[package]

name    = "wavefront_obj"
version = "10.0.0"
authors = [
    "Clark Gaebel <cg.wowus.cg@gmail.com>",
]
keywords    = ["3d", "format", "wavefront", "obj", "piston"]
description = "A parser for the Wavefront .obj file format."
license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/PistonDevelopers/wavefront_obj.git"
homepage    = "https://github.com/PistonDevelopers/wavefront_obj"

[dependencies]
lexical = "5.2"

[dev-dependencies]
proptest = "0.9"
